<resources>
    <string name="app_name">Activities</string>

    <string name="sign_in">Sign In</string>
    <string name="skype_name_email">Skype Name, email or phone</string>
    <string name="create_account">Create account</string>
    <string name="full_name">Full name</string>
    <string name="skype_name">Skype name</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email">Email</string>
</resources>
