<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyblue">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:id="@+id/llayHeader">
        <ImageView
            android:id="@+id/iviBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="8dp"
            android:src="@mipmap/ic_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/create_account"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@+id/llayHeader">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/full_name"
            android:textColorHint="@color/white"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/skype_name"
            android:textColorHint="@color/white"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:textColorHint="@color/white"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/repeat_password"
            android:textColorHint="@color/white"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:textColorHint="@color/white"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:background="@drawable/circle_blue"
            android:src="@mipmap/ic_next"
            android:layout_marginTop="20dp"
            android:id="@+id/btnNext"/>
    </LinearLayout>

</RelativeLayout>
