<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyblue">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:adjustViewBounds="true"
        android:src="@mipmap/skype_logo500"
        android:id="@+id/iviLogo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@+id/iviLogo">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:text="@string/sign_in"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/skype_name_email"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:background="@drawable/circle_blue"
            android:src="@mipmap/ic_next"
            android:layout_marginTop="20dp"
            android:id="@+id/btnNext"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/blue_footer"
        android:id="@+id/llaySignUp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/create_account"/>
    </FrameLayout>
</RelativeLayout>
